<resources>
    <string name="app_name">Android Study</string>
    <string name="person_dialog_text">Person details:</string>
    <string name="person_addresses">Person addresses:</string>
    <string name="address_dialog_text">Address details:</string>
    <string name="yes">Save</string>
    <string name="no">Cancel</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="menu_title">What do your wish?</string>
    <string name="saving_dialog_text">Saving…</string>
    <string name="action_search">Search</string>
    <string name="action_clear_search">Clear</string>
    <string name="tv_address_street_label">Street:</string>
    <string name="tv_address_building_label">Building:</string>
    <string name="tv_address_block_label">Block:</string>
    <string name="image_description">Image description</string>
</resources>
